# terminal

./: .gitignore  PROJECT_STATUS.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
schemas/: market_data.capnp
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  ipc_bus.rs  main.rs  window_manager.rs
src-tauri/src/analytics/: correlation.rs  flow_metrics.rs  liquidations.rs  mod.rs
src-tauri/src/api/: mod.rs  secure_storage.rs
src-tauri/src/news/: aggregator.rs  mod.rs  sentiment.rs
src-tauri/src/orderbook/: l3_aggregator.rs  mod.rs  models.rs
src-tauri/src/risk/: greeks.rs  killswitch.rs  mod.rs
src-tauri/src/websocket/: manager.rs  mod.rs
src-tauri/src/websocket/exchanges/: binance.rs  bybit.rs  coinbase.rs  mod.rs  okx.rs
src/components/: Footer.css  Footer.tsx  GlobalHeader.css  GlobalHeader.tsx
src/components/Canvas/: WorkspaceCanvas.css  WorkspaceCanvas.tsx
src/styles/: globals.css  theme.css  typography.css
