[package]
name = "kinetic-terminal"
version = "0.1.0"
description = "Professional-grade cryptocurrency trading terminal"
authors = ["Kinetic Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
capnpc = "0.19"

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
capnp = "0.19"
capnp-rpc = "0.19"
futures = "0.3"
dashmap = "5.5"
keyring = "2.3"
reqwest = { version = "0.11", features = ["json"] }
async-openai = "0.20"
redis = { version = "0.24", optional = true }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
redis-cache = ["redis"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
